# celeritas

./: .clang-format  .clang-tidy  .codespellrc  .gersemirc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.rst  QUICKSTART.rst  README.md
app/: CMakeLists.txt  CliUtils.cc  CliUtils.hh  celer-config.cc  celer-dump-data.cc  celer-export-geant.cc  orange-update.cc
app/celer-g4/: ActionInitialization.cc  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  ExceptionHandler.cc  ExceptionHandler.hh  GeantDiagnostics.cc  GeantDiagnostics.hh  GlobalSetup.cc  GlobalSetup.hh  HepMC3PrimaryGeneratorAction.cc  LocalLogger.cc  LocalLogger.hh  LogHandlers.cc  LogHandlers.hh  PGPrimaryGeneratorAction.cc  PGPrimaryGeneratorAction.hh  RootIO.cc  RunAction.cc  RunAction.hh  RunInput.cc  RunInput.hh  RunInputIO.json.cc  SensitiveDetector.cc  TimerOutput.hh  TrackingAction.cc  celer-g4.cc  test-harness.py
app/celer-geo/: CMakeLists.txt  GeoInput.cc  GeoInput.hh  Runner.cc  Runner.hh  Types.hh  celer-geo.cc  test-harness.py
app/celer-optical/: CMakeLists.txt  SimulationResult.json.hh  celer-optical.cc  driver.py
app/celer-sim/: CMakeLists.txt  Runner.cc  Runner.hh  RunnerInput.cc  RunnerInput.hh  RunnerInputIO.json.cc  RunnerOutput.cc  RunnerOutput.hh  Transporter.cc  Transporter.hh  celer-sim.cc  simple-driver.py
app/data/: gamma-4evt-15prim.hepmc3  lar-sphere.gdml  ttbarbits-12evt-118prim.hepmc3  ttbarsplit-12evt-1108prim.hepmc3
doc/: CMakeLists.txt  conf.py  config.json.in  index.rst
doc/_input/: geo-status.dot  larsim.dot  optical-flow.dot  optical-flow.mmd  optical-gen-flow.dot  orangeinp-types.dot  orangeinp-types.mmd
doc/_python/: celerdirectives.py  monkeysphinx.py
doc/_static/: .gitignore  custom.css  macros.tex  ornltm-extract.sty  ornltm-header-celeritas.tex  zotero.bib
doc/appendix/: license.rst  release-history.rst
doc/backmatter/: acknowledgments.rst  references.rst
doc/development/: administration.rst  coding.rst  contributing.rst  style.rst  testing.rst
doc/example/: geant4.rst  larceler.rst  minimal.rst
doc/implementation/: core-physics.rst  corecel.rst  data-model.rst  em-physics.rst  geant4-interface.rst  geometry.rst  mucf-physics.rst  optical-physics.rst  orange.rst  units-constants.rst
doc/licenses/: additional.rst  code.rst  documentation.rst
doc/release-history/: v0.1.rst  v0.2.rst  v0.3.rst  v0.4.rst  v0.5.rst  v0.6.rst
doc/usage/: execution.rst  input.rst  installation.rst  integration.rst
example/accel/: CMakeLists.txt  add-celer.diff  fastsim-offload.cc  simple-offload.cc  trackingmanager-offload.cc
example/geant4/: CMakeLists.txt  add-celer.diff  fastsim-offload.cc  simple-offload.cc  trackingmanager-offload.cc
example/minimal/: CMakeLists.txt  minimal.cc
example/offload-template/: .gitignore  BuildInfo.hh.in  CMakeLists.txt  README.rst  main.cc  run-offload.cc  run.mac
src/: CMakeLists.txt  CeleritasG4.hh
src/accel/: AlongStepFactory.cc  AlongStepFactory.hh  CMakeLists.txt  CartMapMagneticField.cc  CartMapMagneticField.hh  CylMapMagneticField.cc  CylMapMagneticField.hh  ExceptionConverter.cc  ExceptionConverter.cu  ExceptionConverter.hh  FastSimulationIntegration.cc  FastSimulationIntegration.hh  FastSimulationModel.cc  FastSimulationModel.hh  FastSimulationOffload.hh  GeantSimpleCalo.cc  GeantSimpleCalo.hh  GeantStepDiagnostic.cc  GeantStepDiagnostic.hh  HepMC3PrimaryGenerator.cc  HepMC3PrimaryGenerator.hh  IntegrationBase.cc  IntegrationBase.hh  LocalOffloadInterface.hh  LocalOpticalGenOffload.cc  LocalOpticalGenOffload.hh  LocalOpticalOffload.cc  LocalOpticalOffload.hh  LocalOpticalTrackOffload.cc  LocalOpticalTrackOffload.hh  LocalTransporter.cc  LocalTransporter.hh  Logger.cc  Logger.hh  PGPrimaryGeneratorAction.cc  PGPrimaryGeneratorAction.hh  RZMapMagneticField.cc  RZMapMagneticField.hh  SetupOptions.cc  SetupOptions.hh  (+19 more)
src/celeritas/: CMakeLists.txt  Constants.hh  Quantities.hh  Types.cc  Types.hh  TypesIO.json.cc  TypesIO.json.hh  UnitTypes.hh  Units.hh
src/corecel/: Assert.cc  Assert.hh  CMakeLists.txt  Config.cc.in  Config.hh.in  Constants.hh  DeviceRuntimeApi.hh  Macros.hh  OpaqueId.hh  OpaqueIdIO.hh  Types.cc  Types.hh  Version.cc.in  Version.hh.in  device_runtime_api.h
src/ddceler/: CMakeLists.txt  CelerPhysics.cc  CelerPhysics.hh  CelerRun.cc  CelerRun.hh
src/geocel/: AllVolumesView.hh  BoundingBox.hh  CMakeLists.txt  DetectorData.hh  DetectorParams.cc  DetectorParams.hh  DetectorView.hh  GeantGdmlLoader.cc  GeantGdmlLoader.hh  GeantGeoParams.cc  GeantGeoParams.hh  GeantGeoUtils.cc  GeantGeoUtils.hh  GeantUtils.cc  GeantUtils.hh  GeoInterface.cc  GeoOpticalIdMap.cc  GeoOpticalIdMap.hh  GeoParamsInterface.cc  GeoParamsInterface.hh  GeoParamsOutput.cc  GeoTrackInterface.hh  GeoTraits.hh  GeoVolumeFinder.cc  GeoVolumeFinder.hh  ScopedGeantExceptionHandler.cc  ScopedGeantExceptionHandler.hh  ScopedGeantLogger.cc  ScopedGeantLogger.hh  SurfaceData.hh  SurfaceParams.cc  SurfaceParams.hh  Types.cc  Types.hh  TypesIO.json.cc  TypesIO.json.hh  UniqueVolumeToString.cc  UniqueVolumeToString.hh  VolumeCollectionBuilder.hh  VolumeData.hh  (+13 more)
src/larceler/: CMakeLists.txt  Convert.hh  GeoSimExporter.cc  GeoSimExporter.fcl  GeoSimExporter.hh  GeoSimExporterModule.cc  GeoSimExporterModule.fcl  GeoSimExporterModule.hh  GeoSimExporter_module.cc  GeoSimExporter_run.fcl  LarCelerStandalone.cc  LarCelerStandalone.hh  LarDataReader.cc  LarDataReader.hh  LarStandaloneRunner.cc  LarStandaloneRunner.hh  PDFullSimCeler.cc  PDFullSimCeler.fcl  PDFullSimCeler.hh  PDFullSimCeler_module.cc  PDSimAna.cc  PDSimAna.hh  PDSimAna_module.cc  SimEnergyDepositData.hh  geosimexporter.fcl  geosimexporter_job.fcl  larceler-env.in  pdfullsimceler.fcl  pdfullsimceler_job.fcl  pdsimana.fcl  pdsimana_job.fcl
src/orange/: AGENTS.md  BoundingBoxUtils.cc  BoundingBoxUtils.hh  CMakeLists.txt  Debug.cc  Debug.hh  DebugIO.json.cc  DebugIO.json.hh  LevelStateAccessor.hh  MatrixUtils.cc  MatrixUtils.hh  OrangeData.hh  OrangeGeoTraits.hh  (+15 more)
(+2330 files in other folders)
